--- a/Itinerary/Info.plist
+++ b/Itinerary/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Required Permission to use photo library</string>
 </dict>
 </plist>
